--- a/view/tema/css/tema.css
+++ b/view/tema/css/tema.css
@@ -7,7 +7,7 @@ www.hugocursos.com.br
 #topo{
 
 min-height: 100px;
-background-color: #204d74;
+background-color: #556B2F;
 color: #fff;
     
 }
@@ -15,7 +15,7 @@ color: #fff;
 #rodape{
      
  min-height: 150px;
- background-color: #204d74;  
+ background-color: #556B2F;  
 color: #fff; 
 padding-top:30px;
     
@@ -65,13 +65,13 @@ padding-top:30px;
 
 .list-group-item.active, .list-group-item.active:focus, .list-group-item.active:hover{
     
-   background-color: #101010; 
+   background-color: #556B2F; 
     
 }
 
 a.list-group-item:hover{
     
-    background-color: #262626;;
+    background-color: #556B2F;
      color: #FFF;
      
     
@@ -88,5 +88,35 @@ a.list-group-item{
 .thumbnail{
     border-radius: 15px;
     box-shadow: 6px 6px 10px #adadad;
+}
+
+.img-logo{
+   
+    background: transparent;
+    height: 100px;
+    width: 225px;
+    margin-left: 270px
+}
+
+.row{
+     align-content: center;
+     align-items: center;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+     top: 50%;
+    left: 50%;
+    margin-right: -50%;
+}
+.pagination>li>a{
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    
+   margin-left: auto;
+    margin-right: auto;
+    
+    background-color: #556B2F;
+    color: #fff;
 }
 
